--- a/src/styles/theme/_mixins.scss
+++ b/src/styles/theme/_mixins.scss
@@ -64,9 +64,35 @@
 }
 
 @mixin serif-font() {
-    font-family: 'Lora', 'Times New Roman', serif;
+    font-family: 'Lora', 'Times New Roman', serif !important;
 }
 
 @mixin sans-serif-font() {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 }
+
+// Rem output with px fallback
+@mixin font-size($sizeValue: 1) {
+    font-size: ($sizeValue * 16) * 1px;
+    font-size: $sizeValue * 1rem;
+}
+
+// Center block
+@mixin center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+// Clearfix
+@mixin clearfix() {
+    content: "";
+    display: table;
+    table-layout: fixed;
+}
+
+// Clear after (not all clearfix need this also)
+@mixin clearfix-after() {
+    clear: both;
+}
+
