--- a/src/styles/theme/_navbar.scss
+++ b/src/styles/theme/_navbar.scss
@@ -1,29 +1,55 @@
 // Styling for the navbar
 #mainNav {
     position: absolute;
-    border-bottom: 1px solid $gray-lighter;
     @include sans-serif-font;
+    background: #ced0cb;
+
+    > .container {
+        width: 100% !important;
+
+        // .navbar-collapse.collapse.show {
+        //     background: #191919;
+        //     position: fixed;
+        //     top: 0;
+        //     left: 0;
+        //     right: 0;
+        //     height: 500px;
+
+        //     .nav-link {
+        //         color: white;
+        //     }
+        // }
+    }
+
     .navbar-brand {
         font-weight: 800;
         color: $gray-light;
         width: 90px;
-        height: 55px;
-        background: url('../static/images/logo/G7Logo_white_gold_circle.png');
+        height: 51px;
+        padding: 0 !important;
+        background-image: url('../static/images/logo/G7Logo_white_gold_circle.png');
+        background-size: 100%;
+
+        @media (max-width: 991px) {
+            width: 44px;
+            height: 28px;
+        }
     }
     .navbar-toggler {
         font-size: 12px;
         font-weight: 800;
-        padding: 13px;
+        padding: 0;
         text-transform: uppercase;
-        color: $gray-light;
+        color: white;
+        border: none;
     }
     .navbar-nav {
         > li.nav-item {
             > a {
                 font-size: 12px;
-                font-weight: 800;
+                font-weight: 400;
                 letter-spacing: 1px;
-                text-transform: uppercase;
+                @include sans-serif-font;
             }
         }
     }
@@ -97,6 +123,15 @@
             -ms-transform: translate3d(0, 100%, 0);
             -o-transform: translate3d(0, 100%, 0);
             transform: translate3d(0, 100%, 0);
+        }
+    }
+}
+
+
+@media (max-width: 991px) {
+    .navbar-toggleable-md>.container {
+        @media (max-width: 991px) {
+            margin: 0 !important;
         }
     }
 }
