updates homepage. updates desktop/mobile navigation and integrates into CMS. adds data dump file.

--- a/src/styles/theme/_global.scss
+++ b/src/styles/theme/_global.scss
@@ -142,9 +142,9 @@ footer {
 }
 
 #content {
-    @media (max-width: 991px) {
-        margin-top: 50px;
-    }
+    // @media (max-width: 991px) {
+    //     margin-top: 50px;
+    // }
 }
 
 .section-highlight {
