--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: G7-Marketing
-Author: Domenico Colandrea <domenic.colandrea@gmail.com>
-Author URI: https://github.com/DomenicoColandrea86
+Author: Martha
+Author URI: https://thisismartha.com
 Description: G7 Marketing Website
 Version: 1.0.0
 */
