--- a/assets/styles/_icons.scss
+++ b/assets/styles/_icons.scss
@@ -18,6 +18,15 @@
     background-image: url('../../assets/images/icons/Arrow-down.png');
 }
 
+.icon-arrow-white {
+    height: 13px;
+    width: 57px;
+    background-position: 100%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url('../../assets/images/icons/Arrow-white.png');
+}
+
 .fa {
     letter-spacing: 0 !important;
 }
