--- a/assets/styles/_navbar.scss
+++ b/assets/styles/_navbar.scss
@@ -219,7 +219,7 @@ A small CSS modification is required. Add this to your theme CSS.
     }
 }
 
-body.page-template-our-work {
+body.case-study-template-default {
     
     #mainNav {
         
