--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -17,5 +17,5 @@
 @import "grid.scss";
 @import "home.scss";
 @import "our-team.scss";
-@import "our-work.scss";
+@import "case-study.scss";
 @import "bootstrap-overrides.scss";
