updates to homepage slider, main navigation, connect newsletter form and google analytics. other various tweaks.

--- a/assets/styles/_case-study.scss
+++ b/assets/styles/_case-study.scss
@@ -65,6 +65,17 @@ body.case-study-template-default {
 			    background-size: cover;
 			    background-position: top right;
 			}
+
+			img {
+				object-fit: cover;
+			    transform: transform(-50% -50%);
+			    object-position: right;
+			    height: 700px;
+
+			    @media (max-width: 768px) {
+					height: 450px;
+				}
+			}
 		}
 	}
 
