--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -19,9 +19,6 @@ body {
 p {
     line-height: 1.5;
     margin: 30px 0;
-    a {
-        text-decoration: underline;
-    }
 }
 
 h1,
@@ -35,11 +32,11 @@ h6 {
 }
 
 a {
-    color: $gray-dark;
     @include transition-all;
+    text-decoration: none !important;
     &:hover,
     &:focus {
-        color: $theme-primary;
+        text-decoration: none;
     }
 }
 
@@ -140,34 +137,5 @@ body {
 section,
 footer {
     padding: 40px 0;
-}
-
-.section-highlight {
-    font-size: 14px;
-    letter-spacing: 4px;
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif!important;
-    font-weight: 300;
-}
-
-.section-text {
-    font-size: 23px;
-    font-weight: 300;
-    letter-spacing: 1px;
-    @include sans-serif-font;
-}
-
-.stripe {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    transition: all 0.2s linear;
-    background-image: url('../../assets/images/bg/stripe.png');
-
-    @media (max-width: 768px) {
-        background-size: cover;
-    }
 }
 
