--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,21 +1,18 @@
 
 @import "normalize";
-@import "animate";
-@import "fonts.scss";
-@import "variables.scss";
-@import "colors.scss";
-@import "mixins.scss";
-@import "utils.scss";
-@import "global.scss";
-@import "icons.scss";
-@import "navbar.scss";
-@import "widgets.scss";
-@import "forms.scss";
-@import "modals.scss";
-@import "post.scss";
-@import "footer.scss";
-@import "grid.scss";
-@import "home.scss";
-@import "our-team.scss";
-@import "case-study.scss";
-@import "bootstrap-overrides.scss";
+@import "fonts";
+@import "variables";
+@import "colors";
+@import "mixins";
+@import "utils";
+@import "global";
+@import "icons";
+@import "navbar";
+@import "widgets";
+@import "forms";
+@import "modals";
+@import "footer";
+@import "home";
+@import "our-team";
+@import "case-study";
+@import "bootstrap-overrides";
