--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -219,6 +219,8 @@
     	img {
 		    width: 90px;
 		    height: auto;
+		    -webkit-filter: grayscale(100%) brightness(0);
+			filter: grayscale(100%) brightness(0);
     	}
 	}
 }
@@ -310,3 +312,23 @@
 	}
 }
 
+.carousel-fade .carousel-inner .carousel-item {
+	transition-property: opacity;
+}
+.carousel-fade .carousel-inner .carousel-item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+	opacity: 0;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+	opacity: 1;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+	left: 0;
+	transform: translate3d(0, 0, 0);
+}
