adds changes to font sizes and other various tweaks as per convo with emillie

--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -1,33 +1,33 @@
 
 
 .frost {
-	color: $frost;
+	color: $frost !important;
 }
 
 .charcoal {
-	color: $charcoal;
+	color: $charcoal !important;
 }
 
 .mustard {
-	color: $mustard;
+	color: $mustard !important;
 }
 
 .dark-navy {
-	color: $dark-navy;
+	color: $dark-navy !important;
 }
 
 .sea-blue {
-	color: $sea-blue;
+	color: $sea-blue !important;
 }
 
 .silver {
-	color: $silver;
+	color: $silver !important;
 }
 
 .cloudy {
-	color: $cloudy;
+	color: $cloudy !important;
 }
 
 .white {
-	color: white;
+	color: white !important;
 }
