--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -8,7 +8,7 @@ $dark-navy: #253746;
 $sea-blue: #304758;
 $cloudy: #A3A3A3;
 $silver: #D8D8D8;
-$steel: #292929;
+$steel: #C6C6C6;
 $dandylion: #F8E124;
 
 $gray-base:        #000 !default;
