--- a/assets/styles/_case-study.scss
+++ b/assets/styles/_case-study.scss
@@ -13,8 +13,8 @@ body.case-study-template-default {
 	.content {
 
 		h2 {
-			font-size: 43px;
-	    	letter-spacing: 1px;
+			font-size: 32px;
+    		letter-spacing: 0.6px;
 	    	line-height: 1.4;
 	    	@include header-font;
 
@@ -24,10 +24,10 @@ body.case-study-template-default {
 		}
 
 		p {
-			font-size: 24px;
+			font-size: 16px;
+			letter-spacing: 0.2px;
 			@include sans-serif-font;
 		    font-weight: 300;
-		    letter-spacing: 2px;
 		    line-height: 1.5;
 
 		    @media (max-width: 768px) {
@@ -128,8 +128,8 @@ body.case-study-template-default {
 
 	.more-projects {
 		h2 {
-			font-size: 40px;
-	    	letter-spacing: 1px;
+			font-size: 32px;
+			letter-spacing: 0.6px;
 	    	@include header-font;
 
 	    	@media (max-width: 768px) {
@@ -170,23 +170,36 @@ body.case-study-template-default {
 				.card-img-overlay {
 					opacity: 0;
 					transition: all 0.2s linear;
-					padding: 2rem;
+					padding: 4rem;
 				    background: rgba(14, 24, 32, .9);
 
 				    @media (max-width: 575px) {
 				     	opacity: 1;
+				     	padding: 2rem;
 					}
 				}
 
 				.card-title {
 				    color: #fff;
 				    letter-spacing: 2px;
-				    font-size: 45px;
+				    font-size: 38px;
 				    line-height: 1.3;
 				    @include header-font;
 
 				    @media (max-width: 768px) {
 				        font-size: 25px;
+					}
+				}
+
+				p {
+					color: #fff;
+					font-size: 27px;
+					letter-spacing: 2px;
+				    font-family: Avenir-Light,Helvetica Neue,Helvetica,Arial,sans-serif!important;
+				    margin-bottom: 50px;
+
+				    @media (max-width: 768px) {
+				        margin-bottom: 10px;
 					}
 				}
 		    }
