--- a/assets/styles/_footer.scss
+++ b/assets/styles/_footer.scss
@@ -15,10 +15,10 @@ footer,
 
     h5 {
         color: #EDEDED;
-        font-weight: 200;
-        @include sans-serif-font;
-        letter-spacing: 2px;
-        font-size: 14px;
+        font-size: 11px;
+        letter-spacing: 3px;
+        font-weight: 600;
+        @include helvetica;
         text-transform: uppercase;
     }
 
@@ -31,20 +31,20 @@ footer,
     }
 
     .branding {
-        width: 96px;
+        height: 40px;
+        width: auto;
         max-width: 100%;
-        height: auto;
     }
 
     .copyright {
         margin-top: 75px;
 
         p {
-            font-size: 12px;
-            font-weight: 200;
-            color: #A3A3A3;
-            letter-spacing: 2px;
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+            font-size: 11px;
+            font-weight: 100;
+            color: #a3a3a3;
+            letter-spacing: 1.6px;
+            @include helvetica;
         }
     }
 
