--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -10,6 +10,10 @@ html {
     box-sizing: inherit;
 }
 
+* {
+    -webkit-font-smoothing: antialiased;
+}
+
 body {
     font-size: 20px;
     color: $gray-dark;
@@ -18,6 +22,8 @@ body {
 }
 
 p {
+    font-size: 16px;
+    letter-spacing: 0.2px;
     line-height: 1.5;
     margin: 30px 0;
 }
@@ -30,6 +36,34 @@ h5,
 h6 {
     font-weight: 800;
     @include sans-serif-font;
+}
+
+h1 {
+    font-size: 58px;
+    letter-spacing: 0.6px;
+}
+
+h2 {
+    font-size: 36px;
+    letter-spacing: 0.6px;
+}
+
+h4 {
+    font-size: 28px;
+    letter-spacing: 0.6px;
+}
+
+h5 {
+    font-size: 11px;
+    letter-spacing: 3px;
+    font-weight: 600;
+    @include helvetica;
+}
+
+p {
+    font-size: 16px;
+    letter-spacing: 0.2px;
+    color: #4c4f54;
 }
 
 a {
