--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -42,7 +42,7 @@
 		    @include header-font;
 		    position: absolute;
 		    left: 50%;
-		    top: 40%;
+		    top: 50%;
 		    transform: translate(-50%,-50%);
 
 			@media (max-width: 768px) {
@@ -53,12 +53,10 @@
 
 		.case-study {
 		    display: inline-block;
-		    left: 50%;
-		    top: 75%;
+		    right: 20px;
+		    bottom: 20px;
 		    text-align: center;
-		    transform: translate(-50%,-50%);
 		    color: #fff;
-		    border: 1px solid white;
 		    padding: 25px;
 		    border-radius: 8px;
 		    line-height: 14px;
@@ -73,7 +71,6 @@
 		    }
 
 			@media (max-width: 768px) {
-				width: 60%;
 				padding: 15px;
 			}
 		}
@@ -81,8 +78,8 @@
 }
 
 .intro {
-	h1 {
-    	font-size: 60px;
+	h2 {
+    	font-size: 43px;
     	line-height: 1.3;
     	font-weight: 500;
 		@include header-font;
@@ -93,10 +90,10 @@
 	}
 
 	p {
-		font-size: 24px;
-		@include sans-serif-font;
+		font-size: 18px;
+	    letter-spacing: .2px;
 	    font-weight: 300;
-	    letter-spacing: 2px;
+		@include sans-serif-font;
 	    line-height: 1.8;
 
 	    @media (max-width: 768px) {
@@ -111,33 +108,33 @@
 
 .what-we-do {
 	h2 {
-		font-size: 40px;
-    	letter-spacing: 1px;
+		font-size: 32px;
+    	letter-spacing: 0.6px;
     	@include header-font;
 
     	@media (max-width: 768px) {
     		font-size: 28px;
 		}
 	}
-
+	
 	h4 {
-    	font-size: 50px;
-    	letter-spacing: 1px;
+    	font-size: 38px;
+		letter-spacing: 0.6px;
 		@include header-font;
 	}
 
 	p {
-		font-size: 24px;
+		font-size: 18px;
+		letter-spacing: 0.2px;
 	    font-weight: 300;
-	    letter-spacing: 1px;
 		@include sans-serif-font;
 	}
 }
 
 .recent-projects {
 	h2 {
-		font-size: 40px;
-    	letter-spacing: 1px;
+		font-size: 32px;
+    	letter-spacing: 0.6px;
     	@include header-font;
 
     	@media (max-width: 768px) {
@@ -177,24 +174,37 @@
 
 			.card-img-overlay {
 				opacity: 0;
-				padding: 2rem;
+				padding: 4rem;
 				transition: all 0.2s linear;
 			    background: rgba(14, 24, 32, .9);
 
 			    @media (max-width: 575px) {
 			     	opacity: 1;
+			     	padding: 2rem;
 				}
 			}
 
 			.card-title {
 			    color: #fff;
-			    letter-spacing: 2px;
-			    font-size: 45px;
+			    font-size: 38px;
+				letter-spacing: 0.6px;
 			    line-height: 1.3;
 			    @include header-font;
 
 			    @media (max-width: 768px) {
 			        font-size: 25px;
+				}
+			}
+
+			p {
+				color: #fff;
+				font-size: 27px;
+				letter-spacing: 2px;
+				font-family: Avenir-Light,Helvetica Neue,Helvetica,Arial,sans-serif!important;
+			    margin-bottom: 50px;
+
+			    @media (max-width: 768px) {
+			        margin-bottom: 10px;
 				}
 			}
 	    }
@@ -203,8 +213,8 @@
 
 .selected-clients {
 	h2 {
-		font-size: 40px;
-    	letter-spacing: 1px;
+		font-size: 32px;
+    	letter-spacing: 0.6px;
     	@include header-font;
 
     	@media (max-width: 768px) {
@@ -237,8 +247,8 @@
 	}
 
 	p {
-		font-size: 14px;
-	    letter-spacing: 2px;
+		font-size: 20px;
+		letter-spacing: 0.2px;
 	    color: #314758;
 	    @include sans-serif-font;
 	}
@@ -246,8 +256,8 @@
 
 .say-hello {
 	h2 {
-		font-size: 40px;
-    	letter-spacing: 1px;
+		font-size: 32px;
+    	letter-spacing: 0.6px;
     	@include header-font;
 
     	@media (max-width: 768px) {
@@ -302,13 +312,18 @@
 
 .stay-in-touch {
 	h2 {
-		font-size: 40px;
-    	letter-spacing: 1px;
+		font-size: 32px;
+    	letter-spacing: 0.6px;
     	@include header-font;
 
     	@media (max-width: 768px) {
     		font-size: 28px;
 		}
+	}
+
+	p {
+		font-size: 20px;
+		letter-spacing: 0.2px;
 	}
 }
 
