--- a/assets/styles/_utils.scss
+++ b/assets/styles/_utils.scss
@@ -1,15 +1,15 @@
 
 .section-highlight {
-    font-size: 14px;
-    letter-spacing: 4px;
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif!important;
-    font-weight: 300;
+    font-size: 11px;
+    letter-spacing: 3px;
+    font-weight: 600;
+    @include helvetica;
 }
 
 .section-text {
-    font-size: 23px;
+    font-size: 20px;
+    letter-spacing: 0.2px;
     font-weight: 300;
-    letter-spacing: 1px;
     @include sans-serif-font;
 }
 
