--- a/assets/styles/_forms.scss
+++ b/assets/styles/_forms.scss
@@ -23,7 +23,9 @@
 		}
 
 	    > div {
-	    	text-align: left !important;
+	    	text-align: center !important;
+	    	color: #A3A3A3 !important;
+	    	line-height: 1.5 !important;
 
 	    	&:first-of-type {
 	    		margin-bottom: 20px;
@@ -91,7 +93,7 @@
 
 			font-size: 14px !important;
 		    font-family: Helvetica Neue,Helvetica,Arial,sans-serif!important;
-		    font-weight: 300 !important;
+		    font-weight: 500 !important;
 		    color: $dark-navy !important;
 		    line-height: 2 !important;
 		    letter-spacing: 2px !important;
@@ -173,21 +175,25 @@
 				&::-webkit-input-placeholder {
 				  color: #636c72;
 				  opacity: 1;
+				  font-weight: 400;
 				}
 
 				&::-moz-placeholder {
 				  color: #636c72;
 				  opacity: 1;
+				  font-weight: 400;
 				}
 
 				&:-ms-input-placeholder {
 				  color: #636c72;
 				  opacity: 1;
+				  font-weight: 400;
 				}
 
 				&::placeholder {
 				  color: #636c72;
 				  opacity: 1;
+				  font-weight: 400;
 				}
 			}
 
