--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -46,11 +46,13 @@ h1 {
 h2 {
     font-size: 36px;
     letter-spacing: 0.6px;
+    line-height: 1.1 !important;
 }
 
 h4 {
     font-size: 28px;
     letter-spacing: 0.6px;
+    line-height: 1.1 !important;
 }
 
 h5 {
@@ -172,5 +174,6 @@ body {
 section,
 footer {
     padding: 40px 0;
+    overflow: hidden;
 }
 
