--- a/assets/styles/_modals.scss
+++ b/assets/styles/_modals.scss
@@ -99,3 +99,176 @@
 body {
   padding: 0 !important;
 }
+
+// Recent Projects Modal
+.recent-projects-modal {
+  background-color: rgba(255, 255, 255, 0);
+
+  .icon-arrow-left {
+    display: none;
+
+    @media(max-width: 991px) {
+      display: block;
+      cursor: pointer;
+    }
+  }
+
+  .close-recent-projects {
+    display: none;
+    font-size: 20px;
+
+    @media(max-width: 991px) {
+      display: block;
+      cursor: pointer;
+    } 
+  }
+
+  .modal-content {
+    background-color: rgba(255, 255, 255, 0);
+  }
+
+  .modal-header,
+  .modal-body,
+  .modal-footer {
+    border: none;
+    border-radius: 0;
+    box-shadow: inherit;
+  }
+
+  .modal-header {
+    background: #0F181F;
+    height: 126px;
+    width: 100%;
+    top: 0;
+    right: 0;
+
+    @media(max-width: 991px) {
+      height: 60px;
+    }
+  }
+
+  .modal-body {
+    margin-top: 126px;
+    flex: 0;
+
+    @media(max-width: 991px) {
+      margin-top: 60px;
+    }
+
+    #recentProjectsSlider {
+      display: block;
+
+      @media(max-width: 575px) {
+        display: none;
+      }
+    }
+
+    #recentProjectsMobile {
+      display: none;
+
+      @media(max-width: 575px) {
+        display: block;
+      } 
+    }
+  }
+
+  .modal-footer {
+    background: #0F181F;
+    height: auto;
+    width: 100%;
+    position: relative;
+    display: block;
+
+    @media(max-width: 575px) {
+      display: none;
+    }
+
+    .recent-projects-footer {
+      max-width: 250px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 7.5px 0;
+
+      .right-arrow,
+      .left-arrow,
+      .paging-info {
+        margin: auto;
+        align-self: center;
+        color: #fff;
+        font-size: 18px;
+        line-height: 18px;
+        letter-spacing: 2px;
+        font-family: Avenir-Light,Helvetica Neue,Helvetica,Arial,sans-serif!important;
+      }
+    }
+  }
+
+  .case-study-item {
+    padding-right: 0 !important;
+      padding-left: 0 !important;
+
+      .card {
+        border: none;
+        border-radius: 0;
+
+        &:hover {
+          .card-img-overlay {
+          opacity: 1;
+        }
+        }
+
+        img {
+          transition: all 0.2s linear;
+          object-fit: cover;
+          max-height: 100%;
+          height: 400px;
+
+          @media (max-width: 575px) {
+              max-height: 100%;
+            height: 275px;
+          }
+        }
+
+        .card-img {
+          border-radius: 0;
+      }
+
+      .card-img-overlay {
+        opacity: 0;
+        padding: 4rem;
+        transition: all 0.2s linear;
+          background: rgba(14, 24, 32, .9);
+
+          @media (max-width: 575px) {
+            padding: 2rem;
+        }
+      }
+
+      .card-title {
+          color: #fff;
+          font-size: 38px;
+        letter-spacing: 0.6px;
+          line-height: 1.3;
+          @include header-font;
+
+          @media (max-width: 768px) {
+              font-size: 25px;
+          }
+      }
+
+      p {
+        color: #fff;
+        font-size: 27px;
+        letter-spacing: 2px;
+        font-family: Avenir-Light,Helvetica Neue,Helvetica,Arial,sans-serif!important;
+          margin-bottom: 50px;
+
+          @media (max-width: 768px) {
+              margin-bottom: 10px;
+        }
+      }
+    }
+  }
+}
