--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -46,13 +46,13 @@ h1 {
 h2 {
     font-size: 36px;
     letter-spacing: 0.6px;
-    line-height: 1.1 !important;
+    line-height: 1.1;
 }
 
 h4 {
     font-size: 28px;
     letter-spacing: 0.6px;
-    line-height: 1.1 !important;
+    line-height: 1.1;
 }
 
 h5 {
