--- a/assets/styles/_case-study.scss
+++ b/assets/styles/_case-study.scss
@@ -23,29 +23,21 @@ body.case-study-template-default {
 			}
 		}
 
+		.lead {
+			font-size: 18px;
+			line-height: 1.8;
+			@include sans-serif-font;
+			font-weight: 300;
+		    letter-spacing: .2px;
+		}
+
 		p {
 			font-size: 16px;
 			letter-spacing: 0.2px;
-			@include sans-serif-font;
+			font-family: Helvetica Neue,Helvetica,Arial,sans-serif!important;
 		    font-weight: 300;
 		    line-height: 1.5;
-
-		    @media (max-width: 768px) {
-				line-height: 1.4;
-			}
-		}
-
-		.sub-text {
-			font-size: 18px;
-		    font-family: Helvetica Neue,Helvetica,Arial,sans-serif!important;
-		    font-weight: 300;
-			color: $dark-navy;
-			line-height: 2;
-
-			@media (max-width: 768px) {
-				color: $cloudy;
-				line-height: 1.8;
-			}
+		    color: #4C4F54;
 		}
 	}
 
