--- a/assets/styles/_forms.scss
+++ b/assets/styles/_forms.scss
@@ -236,7 +236,11 @@
 			display: table !important;
 			background:none !important;
 			border:none !important;
-
+			
+			&:hover {
+				text-decoration: underline !important;
+			}
+				
 			&:focus {
 				outline: 1px dotted;
 				outline: 5px auto -webkit-focus-ring-color;
