--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -79,6 +79,10 @@
     font-family: Helvetica, Arial, sans-serif !important;
 }
 
+@mixin eames-century-book() {
+    font-family: 'Eames-Century-Book', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+}
+
 
 // Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
