--- a/assets/styles/_navbar.scss
+++ b/assets/styles/_navbar.scss
@@ -61,6 +61,10 @@ A small CSS modification is required. Add this to your theme CSS.
                 font-weight: 600;
                 @include helvetica;
                 padding-top: 40px;
+
+                &:hover {
+                    color: #dcdcdc;
+                }
             }
         }
     }
@@ -70,20 +74,12 @@ A small CSS modification is required. Add this to your theme CSS.
         .navbar-brand {
             padding: 15px 20px;
             color: white;
-            &:hover,
-            &:focus {
-                color: fade-out(white, .2);
-            }
         }
         .navbar-nav {
             > li.nav-item {
                 > a {
                     padding: 15px 20px;
                     color: white;
-                    &:hover,
-                    &:focus {
-                        color: fade-out(white, .2);
-                    }
                 }
             }
         }
@@ -251,6 +247,10 @@ body.dark-logo {
         
         .navbar-nav > li.nav-item > a {
             color: $steel;
+
+            &:hover {
+                color: #a1a1a1;
+            }
         }
 
         .navbar-brand {
